--- a/achds.bib
+++ b/achds.bib
@@ -1585,7 +1585,7 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
 @inproceedings{P3-1_adassxxiv,
        author          = {Reinhold Schaaf and Adam Brazier and
                           Tim Jenness and Thomas Nikola and Martin Shepherd},
-       booktitle       = {ADASS XXIV},
+       booktitle       = {Astronomical Data Analysis Software and Systems XXIV},
        title           = {{A new HDF5 based raw data model for CCAT}},
        year            = 2014,
        archivePrefix ="arXiv",
@@ -1597,7 +1597,7 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
 
 @inproceedings{O4-4_adassxxiv,
   author =       "Daniel Price and L. Greenhill and B. Barsdell",
-  booktitle =    "ADASS XXIV",
+  booktitle =    "Astronomical Data Analysis Software and Systems XXIV",
   title =        {{Is HDF5 a good format to replace UVFITS?}},
   year =         2014,
    archivePrefix ="arXiv",
