Update "in press" references

--- a/achds.bib
+++ b/achds.bib
@@ -1147,7 +1147,8 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   archivePrefix = "arXiv",
   eprint =    {1410.7509},
   doi =          {10.1016/j.ascom.2014.10.005},
-  volume =       {in press},
+  pages =        {40},
+  volume =       {9},
 }
 
 @Article{2015Jenness,
@@ -1660,14 +1661,17 @@ year =      {2004},
 @Article{2015Economou,
   author =       {Frossie Economou and S\'{e}verin Gaudet and Tim
                   Jenness and Russell O.\ Redman and Sharon Goliath
-                  and Patrick Dowler and David Schade and Antonio
+                  and Patrick Dowler and Malcolm J. Currie and Graham S. Bell
+                  and Sarah F. Graves and John Ouellette and David Schade and Antonio
                   Chrysostomou},
   title =        "{Observatory/data centre partnerships and the
                   VO-centric archive: The JCMT Science Archive
                   experience}",
+  archivePrefix ="arXiv",
+  eprint =       {1412.4399},
   journal =      {Astron.\ Comp.},
   year =         2015,
-  volume =       {submitted},
+  volume =       {in press},
 }
 
 @TechReport{asdf,
